# platanus-hack-25-team-6

./: .env.example  .gitignore  PROJECT_CONTEXT.md  README.md  REALTIME_GUIDE.md  STACK_ARCHITECTURE.md  TWILIO_SETUP.md  docker-compose.prod.yml  docker-compose.yml  next-pwa.config.js  next.config.ts  package.json  platanus-hack-project.json  project-description.md
.github/workflows/: deploy.yml
app/: layout.tsx  page.tsx
app/api/health/: route.ts
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: auth.py  realtime.py  recordings.py  trusted_contacts.py  twilio_calls.py  whatsapp.py
backend/app/core/: config.py  database.py  storage.py
backend/app/models/: recording.py  trusted_contact.py  user.py
backend/app/schemas/: recording.py  trusted_contact.py
backend/app/services/: audio_converter.py  impersonation_alert.py  realtime_service.py  scam_detection.py  transcription.py  whatsapp_service.py
backend/app/utils/: auth.py
frontend/: .dockerignore  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/dev-dist/: sw.js
frontend/public/: icon-generator.html  offline.html
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: AudioRecorder.css  AudioRecorder.jsx  AudioVisualizer.css  AudioVisualizer.jsx  CallDetail.jsx  CallWaveform.jsx  Dashboard.jsx  InstallPrompt.jsx  Landing.jsx  OnboardingFlow.jsx  (+12 more)
public/: manifest.json
scripts/: setup.sh  start.sh
src/core/: db.ts  minio.ts
src/services/: file.service.ts
(+8 files in other folders)
